[build-system]
requires = ["setuptools >= 77.0.3","numpy","scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "NoiseTools"
version = "0.0.1"
authors = [
  { name="Alexandre Dumont", email="Alexandre.Dumont3@usherbrooke.ca" },
]
description = "Simple python library for commonly used methods in RF noise analysis."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/a-dumont/NoiseTools"
Issues = "https://github.com/a-dumont/NoiseTools/issues"
